src/objects/DataImport__c.object
<CustomObject>
    <description>Custom object to hold denormalized data records that can be imported into the Nonprofit Success Pack.</description>
    <label>NPSP Data Import</label>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>Data Import ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPSP Data Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account1Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account1 Imported</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPSP Data Imports (Account1 Imported)</relationshipLabel>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account1ImportStatus__c</fullName>
        <label>Account1 Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1_City__c</fullName>
        <inlineHelpText>Account1.BillingCity</inlineHelpText>
        <label>Account1 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1_Country__c</fullName>
        <inlineHelpText>Account1.BillingCountry</inlineHelpText>
        <label>Account1 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1_Name__c</fullName>
        <inlineHelpText>Account1.Name</inlineHelpText>
        <label>Account1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1_Phone__c</fullName>
        <inlineHelpText>Account1.Phone</inlineHelpText>
        <label>Account1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account1_State_Province__c</fullName>
        <inlineHelpText>Account1.BillingState</inlineHelpText>
        <label>Account1 State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account1_Street__c</fullName>
        <inlineHelpText>Account1.BillingStreet</inlineHelpText>
        <label>Account1 Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account1_Website__c</fullName>
        <inlineHelpText>Account1.Website</inlineHelpText>
        <label>Account1 Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Account1_Zip_Postal_Code__c</fullName>
        <inlineHelpText>Account1.BillingPostalCode</inlineHelpText>
        <label>Account1 Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account2 Imported</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPSP Data Imports (Account2 Imported)</relationshipLabel>
        <relationshipName>Data_Imports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account2ImportStatus__c</fullName>
        <label>Account2 Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2_City__c</fullName>
        <inlineHelpText>Account2.BillingCity</inlineHelpText>
        <label>Account2 City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2_Country__c</fullName>
        <inlineHelpText>Account2.BillingCountry</inlineHelpText>
        <label>Account2 Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2_Name__c</fullName>
        <inlineHelpText>Account2.Name</inlineHelpText>
        <label>Account2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2_Phone__c</fullName>
        <inlineHelpText>Account2.Phone</inlineHelpText>
        <label>Account2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account2_State_Province__c</fullName>
        <inlineHelpText>Account2.BillingState</inlineHelpText>
        <label>Account2 State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account2_Street__c</fullName>
        <inlineHelpText>Account2.BillingStreet</inlineHelpText>
        <label>Account2 Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account2_Website__c</fullName>
        <inlineHelpText>Account2.Website</inlineHelpText>
        <label>Account2 Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Account2_Zip_Postal_Code__c</fullName>
        <inlineHelpText>Account2.BillingPostalCode</inlineHelpText>
        <label>Account2 Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACH_Consent__c</fullName>
        <description>The Elevate Giving Page consent message the donor agreed to.</description>
        <inlineHelpText>The Elevate Giving Page consent message the donor agreed to.</inlineHelpText>
        <label>Payment ACH Consent Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Object_JSON__c</fullName>
        <description>This field allows a dynamic number of records for a dynamic number of objects to be created from a single Data Import record. Additional object information is stored here in JSON format.</description>
        <inlineHelpText>This field allows a dynamic number of records for a dynamic number of objects to be created from a single Data Import record. Additional object information is stored here in JSON format.</inlineHelpText>
        <label>Additional Object JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApexJobId__c</fullName>
        <description>The ApexJobID of the Batch Job that processed the record.</description>
        <inlineHelpText>The ApexJobID of the Batch Job that processed the record.</inlineHelpText>
        <label>ApexJobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Status__c</fullName>
        <label>Campaign Member Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact1 Imported</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPSP Data Imports (Contact1 Imported)</relationshipLabel>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact1ImportStatus__c</fullName>
        <label>Contact1 Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1_Alternate_Email__c</fullName>
        <inlineHelpText>Contact1.npe01__AlternateEmail__c</inlineHelpText>
        <label>Contact1 Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact1_Birthdate__c</fullName>
        <inlineHelpText>Contact1.Birthdate</inlineHelpText>
        <label>Contact1 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact1_Consent_Message__c</fullName>
        <description>Provides details on what the Contact opted in to.</description>
        <inlineHelpText>Provides details on what the Contact opted in to.</inlineHelpText>
        <label>Contact1 Consent Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact1_Consent_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if a Contact consented to opt in.</description>
        <inlineHelpText>Determines if a Contact consented to opt in.</inlineHelpText>
        <label>Contact1 Consent Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact1_Firstname__c</fullName>
        <inlineHelpText>Contact1.Firstname</inlineHelpText>
        <label>Contact1 First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1_Home_Phone__c</fullName>
        <inlineHelpText>Contact1.HomePhone</inlineHelpText>
        <label>Contact1 Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact1_Lastname__c</fullName>
        <inlineHelpText>Contact1.Lastname</inlineHelpText>
        <label>Contact1 Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1_Mobile_Phone__c</fullName>
        <inlineHelpText>Contact1.MobilePhone</inlineHelpText>
        <label>Contact1 Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact1_Other_Phone__c</fullName>
        <inlineHelpText>Contact1.OtherPhone</inlineHelpText>
        <label>Contact1 Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact1_Personal_Email__c</fullName>
        <inlineHelpText>Contact1.npe01__HomeEmail__c</inlineHelpText>
        <label>Contact1 Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact1_Preferred_Email__c</fullName>
        <inlineHelpText>Contact1.npe01__Preferred_Email__c</inlineHelpText>
        <label>Contact1 Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact1_Preferred_Phone__c</fullName>
        <inlineHelpText>Contact1.npe01__PreferredPhone__c</inlineHelpText>
        <label>Contact1 Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact1_Salutation__c</fullName>
        <inlineHelpText>Contact1.Salutation</inlineHelpText>
        <label>Contact1 Salutation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1_Title__c</fullName>
        <inlineHelpText>Contact1.Title</inlineHelpText>
        <label>Contact1 Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact1_Work_Email__c</fullName>
        <inlineHelpText>Contact1.npe01__WorkEmail__c</inlineHelpText>
        <label>Contact1 Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact1_Work_Phone__c</fullName>
        <inlineHelpText>Contact1.npe01__WorkPhone__c</inlineHelpText>
        <label>Contact1 Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact2Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact2 Imported</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPSP Data Imports (Contact2 Imported)</relationshipLabel>
        <relationshipName>Data_Imports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact2ImportStatus__c</fullName>
        <label>Contact2 Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Alternate_Email__c</fullName>
        <inlineHelpText>Contact2.npe01__AlternateEmail__c</inlineHelpText>
        <label>Contact2 Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact2_Birthdate__c</fullName>
        <inlineHelpText>Contact2.Birthdate</inlineHelpText>
        <label>Contact2 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact2_Firstname__c</fullName>
        <inlineHelpText>Contact2.Firstname</inlineHelpText>
        <label>Contact2 First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Home_Phone__c</fullName>
        <inlineHelpText>Contact2.HomePhone</inlineHelpText>
        <label>Contact2 Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact2_Lastname__c</fullName>
        <inlineHelpText>Contact2.Lastname</inlineHelpText>
        <label>Contact2 Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Mobile_Phone__c</fullName>
        <inlineHelpText>Contact2.MobilePhone</inlineHelpText>
        <label>Contact2 Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact2_Other_Phone__c</fullName>
        <inlineHelpText>Contact2.OtherPhone</inlineHelpText>
        <label>Contact2 Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact2_Personal_Email__c</fullName>
        <inlineHelpText>Contact2.npe01__HomeEmail__c</inlineHelpText>
        <label>Contact2 Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact2_Preferred_Email__c</fullName>
        <inlineHelpText>Contact2.npe01__Preferred_Email__c</inlineHelpText>
        <label>Contact2 Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact2_Preferred_Phone__c</fullName>
        <inlineHelpText>Contact2.npe01__PreferredPhone__c</inlineHelpText>
        <label>Contact2 Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact2_Salutation__c</fullName>
        <inlineHelpText>Contact2.Salutation</inlineHelpText>
        <label>Contact2 Salutation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Title__c</fullName>
        <inlineHelpText>Contact2.Title</inlineHelpText>
        <label>Contact2 Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact2_Work_Email__c</fullName>
        <inlineHelpText>Contact2.npe01__WorkEmail__c</inlineHelpText>
        <label>Contact2 Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact2_Work_Phone__c</fullName>
        <inlineHelpText>Contact2.npe01__WorkPhone__c</inlineHelpText>
        <label>Contact2 Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DonationCampaignImported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Opportunity.CampaignId</inlineHelpText>
        <label>Donation Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonationCampaignImportStatus__c</fullName>
        <label>Donation Campaign Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DonationImported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donation Imported</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>NPSP Data Imports (Opportunity1 Imported)</relationshipLabel>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DonationImportStatus__c</fullName>
        <label>Donation Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <inlineHelpText>Opportunity.Amount</inlineHelpText>
        <label>Donation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Donation_Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Date__c</fullName>
        <inlineHelpText>Opportunity.CloseDate</inlineHelpText>
        <label>Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Description__c</fullName>
        <inlineHelpText>Opportunity.Description</inlineHelpText>
        <label>Donation Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Donation_Donor__c</fullName>
        <description>Specifies whether the donation is an individual donation from Contact1, or an organizational donation from Account1.</description>
        <inlineHelpText>Specifies whether the donation is an individual donation from Contact1, or an organizational donation from Account1.</inlineHelpText>
        <label>Donation Donor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact1</fullName>
                </value>
                <value>
                    <fullName>Account1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donation_Elevate_Recurring_ID__c</fullName>
        <description>The external, unique ID of the Recurring Donation in Elevate that this donation Opportunity is linked to.</description>
        <inlineHelpText>The external, unique ID of the Recurring Donation in Elevate that this donation Opportunity is linked to.</inlineHelpText>
        <label>Donation Elevate Recurring ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Honoree_Information__c</fullName>
        <description>Contact information, such as email, address, or phone the donor provided for the tribute honoree.</description>
        <inlineHelpText>Contact information, such as email, address, or phone the donor provided for the tribute honoree.</inlineHelpText>
        <label>Donation Honoree Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Donation_Honoree_Name__c</fullName>
        <description>The honoree name as provided by the donor.</description>
        <inlineHelpText>The honoree name as provided by the donor.</inlineHelpText>
        <label>Donation Honoree Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Membership_End_Date__c</fullName>
        <inlineHelpText>Opportunity.npe01__Membership_End_Date__c</inlineHelpText>
        <label>Donation Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Membership_Origin__c</fullName>
        <inlineHelpText>Opportunity.npe01__Membership_Origin__c</inlineHelpText>
        <label>Donation Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Membership_Start_Date__c</fullName>
        <inlineHelpText>Opportunity.npe01__Membership_Start_Date__c</inlineHelpText>
        <label>Donation Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Member_Level__c</fullName>
        <inlineHelpText>Opportunity.npe01__Member_Level__c</inlineHelpText>
        <label>Donation Member Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Name__c</fullName>
        <description>The donation&apos;s name.  Will be automatically generated by the system if left empty.</description>
        <inlineHelpText>Opportunity.Name</inlineHelpText>
        <label>Donation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Notification_Message__c</fullName>
        <description>A personalized message for the notification recipient.</description>
        <inlineHelpText>A personalized message for the notification recipient.</inlineHelpText>
        <label>Donation Notification Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Donation_Notification_Preference__c</fullName>
        <description>Indicates how the notification recipient should be notified. For example, by email or phone.</description>
        <inlineHelpText>Indicates how the notification recipient should be notified. For example, by email or phone.</inlineHelpText>
        <label>Donation Notification Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Do Not Notify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donation_Notification_Recipient_Email__c</fullName>
        <description>The email address for the person receiving the notification.</description>
        <inlineHelpText>The email address for the person receiving the notification.</inlineHelpText>
        <label>Donation Notification Recipient Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Notification_Recipient_Info__c</fullName>
        <description>Contact information, such as address or phone the donor provided for the notification recipient.</description>
        <inlineHelpText>Contact information, such as address or phone the donor provided for the notification recipient.</inlineHelpText>
        <label>Donation Notification Recipient Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Donation_Notification_Recipient_Name__c</fullName>
        <description>The name of the person to notify of this gift.</description>
        <inlineHelpText>The name of the person to notify of this gift.</inlineHelpText>
        <label>Donation Notification Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Possible_Matches__c</fullName>
        <description>A comma-separated list of Ids for the first 10 possible Opportunity matches for a donation.</description>
        <inlineHelpText>A comma-separated list of Ids for the first 10 possible Opportunity matches for a donation.</inlineHelpText>
        <label>Donation Possible Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Record_Type_Name__c</fullName>
        <description>The Name of the Opportunity Record Type to use for the donation.  Uses default Record Type if left blank.</description>
        <inlineHelpText>Opportunity.RecordTypeId</inlineHelpText>
        <label>Donation Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Stage__c</fullName>
        <description>The Stage to set on the Opportunity.  Will set to Closed Won if left blank.</description>
        <inlineHelpText>Opportunity.StageName</inlineHelpText>
        <label>Donation Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Tribute_Type__c</fullName>
        <description>Indicates whether the donation is in honor or in memory of an individual.</description>
        <inlineHelpText>Indicates whether the donation is in honor or in memory of an individual.</inlineHelpText>
        <label>Donation Tribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honor</fullName>
                </value>
                <value>
                    <fullName>Memorial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donation_Type__c</fullName>
        <inlineHelpText>Opportunity.Type</inlineHelpText>
        <label>Donation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elevate_Custom_Metadata__c</fullName>
        <description>Custom metadata from Elevate Giving Pages, stored as JSON.</description>
        <inlineHelpText>Custom metadata from Elevate Giving Pages, stored as JSON.</inlineHelpText>
        <label>Elevate Custom Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Elevate_Payment_Status__c</fullName>
        <description>The transaction status shown in Elevate.</description>
        <inlineHelpText>The transaction status shown in Elevate.</inlineHelpText>
        <formula>CASE(Payment_Status__c,
                &apos;PENDING&apos;,
                &apos;Pending&apos;,

                &apos;CAPTURED&apos;,
                &apos;Succeeded&apos;,

                &apos;NONRETRYABLEERROR&apos;,
                &apos;Failed&apos;,

                &apos;RETRYABLEERROR&apos;,
                &apos;Failed&apos;,

                &apos;DECLINED&apos;,
                &apos;Declined&apos;,

                &apos;REFUNDISSUED&apos;,
                &apos;Succeeded&apos;,

                &apos;SUBMITTED&apos;,
                &apos;Submitted&apos;,

                &apos;SETTLED&apos;,
                &apos;Succeeded&apos;,

                &apos;AUTHORIZED&apos;,
                &apos;Authorized&apos;,

                &apos;EXPIRED&apos;,
                &apos;Expired Authorization&apos;,

                &apos;PAYMENTPROCESSING&apos;,
                &apos;Pending&apos;,

            &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elevate Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailureInformation__c</fullName>
        <description>Description of what caused the Data Import record to fail to be imported.</description>
        <inlineHelpText>Description of what caused the Data Import record to fail to be imported.</inlineHelpText>
        <label>Failure Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GAU_Allocation_1_Amount__c</fullName>
        <description>The monetary amount attributed to the Opportunity&apos;s first GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</description>
        <inlineHelpText>The monetary amount attributed to the Opportunity&apos;s first GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</inlineHelpText>
        <label>GAU Allocation 1: Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GAU_Allocation_1_GAU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The salesforce id of the GAU to be used for the first allocation.</description>
        <inlineHelpText>The salesforce id of the GAU to be used for the first allocation.</inlineHelpText>
        <label>GAU Allocation 1: GAU</label>
        <referenceTo>General_Accounting_Unit__c</referenceTo>
        <relationshipLabel>NPSP Data Imports (GAU 1)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports_GAU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GAU_Allocation_1_Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the first GAU Allocation if it was successfully created.</description>
        <inlineHelpText>A lookup to the first GAU Allocation if it was successfully created.</inlineHelpText>
        <label>GAU Allocation 1: Imported</label>
        <referenceTo>Allocation__c</referenceTo>
        <relationshipLabel>NPSP Data Imports (GAU 1)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports_GAU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GAU_Allocation_1_Import_Status__c</fullName>
        <description>The status from attempting to insert the first GAU Allocation.</description>
        <inlineHelpText>The status from attempting to insert the first GAU Allocation.</inlineHelpText>
        <label>GAU Allocation 1: Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAU_Allocation_1_Percent__c</fullName>
        <description>The percent attributed to the Opportunity&apos;s first GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</description>
        <inlineHelpText>The percent attributed to the Opportunity&apos;s first GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</inlineHelpText>
        <label>GAU Allocation 1: Percent</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GAU_Allocation_2_Amount__c</fullName>
        <description>The monetary amount attributed to the Opportunity&apos;s second GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</description>
        <inlineHelpText>The monetary amount attributed to the Opportunity&apos;s second GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</inlineHelpText>
        <label>GAU Allocation 2: Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GAU_Allocation_2_GAU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The salesforce id of the GAU to be used for the second GAU allocation.</description>
        <inlineHelpText>The salesforce id of the GAU to be used for the second GAU allocation.</inlineHelpText>
        <label>GAU Allocation 2: GAU</label>
        <referenceTo>General_Accounting_Unit__c</referenceTo>
        <relationshipLabel>NPSP Data Imports (GAU 2)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports_GAU2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GAU_Allocation_2_Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the first GAU Allocation if it was successfully created.</description>
        <inlineHelpText>A lookup to the first GAU Allocation if it was successfully created.</inlineHelpText>
        <label>GAU Allocation 2: Imported</label>
        <referenceTo>Allocation__c</referenceTo>
        <relationshipLabel>NPSP Data Imports (GAU 2)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports_GAU2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GAU_Allocation_2_Import_Status__c</fullName>
        <description>The status from attempting to insert the second GAU Allocation.</description>
        <inlineHelpText>The status from attempting to insert the second GAU Allocation.</inlineHelpText>
        <label>GAU Allocation 2: Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAU_Allocation_2_Percent__c</fullName>
        <description>The percent attributed to the Opportunity&apos;s second GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</description>
        <inlineHelpText>The percent attributed to the Opportunity&apos;s second GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</inlineHelpText>
        <label>GAU Allocation 2: Percent</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HomeAddressImported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Address Imported</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HomeAddressImportStatus__c</fullName>
        <label>Home Address Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_City__c</fullName>
        <inlineHelpText>Address.npsp__MailingCity__c</inlineHelpText>
        <label>Home City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Country__c</fullName>
        <inlineHelpText>Address.npsp__MailingCountry__c</inlineHelpText>
        <label>Home Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>